logs/dag_id=process_weather_people_postgres/run_id=scheduled__2023-06-04T00:00:00+00:00/task_id=create_players_table/attempt=3.log
[2023-06-05T20:35:07.837+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: process_weather_people_postgres.create_players_table scheduled__2023-06-04T00:00:00+00:00 [queued]>
[2023-06-05T20:35:07.849+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: process_weather_people_postgres.create_players_table scheduled__2023-06-04T00:00:00+00:00 [queued]>
[2023-06-05T20:35:07.850+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T20:35:07.850+0000] {taskinstance.py:1363} INFO - Starting attempt 3 of 6
[2023-06-05T20:35:07.850+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T20:35:07.865+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_players_table> on 2023-06-04 00:00:00+00:00
[2023-06-05T20:35:07.872+0000] {standard_task_runner.py:55} INFO - Started process 3503 to run task
[2023-06-05T20:35:07.876+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'process_weather_people_postgres', 'create_players_table', 'scheduled__2023-06-04T00:00:00+00:00', '--job-id', '71', '--raw', '--subdir', 'DAGS_FOLDER/process_weather_people_postgres/process_weather_people_postgres.py', '--cfg-path', '/tmp/tmp5mhyppjr']
[2023-06-05T20:35:07.876+0000] {standard_task_runner.py:83} INFO - Job 71: Subtask create_players_table
[2023-06-05T20:35:07.936+0000] {task_command.py:376} INFO - Running <TaskInstance: process_weather_people_postgres.create_players_table scheduled__2023-06-04T00:00:00+00:00 [running]> on host 1160da0dacdb
[2023-06-05T20:35:08.003+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=data_eng
AIRFLOW_CTX_DAG_ID=process_weather_people_postgres
AIRFLOW_CTX_TASK_ID=create_players_table
AIRFLOW_CTX_EXECUTION_DATE=2023-06-04T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-06-04T00:00:00+00:00
[2023-06-05T20:35:08.015+0000] {base.py:71} INFO - Using connection ID 'postgres_default' for task execution.
[2023-06-05T20:35:08.032+0000] {sql.py:375} INFO - Running statement: CREATE TABLE IF NOT EXISTS { { params.table_name } } (
    user_id int,
    first_name varchar(200),
    last_name varchar(200),
    email varchar(150),
    gender varchar(10),
    age int,
    city varchar(200),
    lat_location varchar(200),
    lon_location varchar(200)
    inserted_date date
);, parameters: None
[2023-06-05T20:35:08.038+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: CREATE TABLE IF NOT EXISTS { { params.table_name } } (
                                   ^

[2023-06-05T20:35:08.047+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=process_weather_people_postgres, task_id=create_players_table, execution_date=20230604T000000, start_date=20230605T203507, end_date=20230605T203508
[2023-06-05T20:35:08.060+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 71 for task create_players_table (syntax error at or near "{"
LINE 1: CREATE TABLE IF NOT EXISTS { { params.table_name } } (
                                   ^
; 3503)
[2023-06-05T20:35:08.088+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-06-05T20:35:08.114+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
